drupal/sites/all/modules/custom/features/my_maps_view/css/MyMaps.css
#numThumbnails a {
    padding-right: 5px;
}

#numThumbnails #manage-maps {
    padding-left: 5px;
    border-left: 1px solid #dedede;
}

.wrapper {
    max-width: 620px;
    margin: auto;
}

.jcarousel-wrapper {
    margin: 5px auto;
    position: relative;
}

.jcarousel {
    position: relative;
    overflow: hidden;
    width: 100%;
}

.jcarousel ul {
    width: 20000em;
    position: relative;
    list-style: none;
    margin: 0;
    padding: 0;
}

.jcarousel li {
    float: left;
    height: 17em;
    min-height: 240px;
    margin-right: 2px;
    margin-left: 2px;
    margin-top: 0.25em;
    background-color: #fff;
    padding: 5px;
}

.jcarousel li.load-thumbnail,
.jcarousel li.hide-thumbnail {
    display: none;
}
.jcarousel li.load-thumbnail.active {
    display: block;
}

.thumbitem-border {
    padding: 2px;
    border: 1px solid #efefef;
    height: 16.5em;
    min-height: 230px;
    width: 190px;
    margin: auto;
}
.thumbitem-border p {
    margin-bottom: 0;
}
.jcarousel img {
    max-height: 121px;
    max-width: 100%;
}

.jcarousel .loading {
    text-align: center;
    line-height: 90px;
}

.jcarousel-control-prev,
.jcarousel-control-next {
    position: absolute;
    top: 75px;
    width: 30px;
    height: 30px;
    text-align: center;
    background: #444444;
    color: #fafafa;
    text-decoration: none;
    text-shadow: 0 0 1px #000;
    font: 24px/27px Arial, sans-serif;
    -webkit-border-radius: 30px;
    -moz-border-radius: 30px;
    border-radius: 30px;
    -webkit-box-shadow: 0 0 2px #999;
    -moz-box-shadow: 0 0 2px #999;
    box-shadow: 0 0 2px #999;
    z-index: 10;
}

.ui-widget-content a.jcarousel-control-prev, .ui-widget-content a.jcarousel-control-next,
.ui-widget-content a.jcarousel-control-prev:visited, .ui-widget-content a.jcarousel-control-next:visited {
    color: #fafafa;
}

.jcarousel-control-prev {
    left: -25px;
}

.jcarousel-control-next {
    right: -25px;
}

.ui-widget-content a.jcarousel-control-prev:hover,
.ui-widget-content a.jcarousel-control-next:hover,
.ui-widget-content a.jcarousel-control-prev:focus,
.ui-widget-content a.jcarousel-control-next:focus,
.ui-widget-content a.jcarousel-control-prev:active,
.ui-widget-content a.jcarousel-control-next:active {
    text-decoration: none;
    color: #ffffff;    
    background-color: #333333;
}

.jcarousel-control-prev.inactive,
.jcarousel-control-next.inactive {
    visibility: hidden;
}

.widgetHeader {
    text-align: left;
    margin-bottom: 0px;
}

.mapAppTitle {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-height: 40px;
    max-width: 198px;
    font-size: 83%;
    font-weight: bold;
    padding: 5px 5px 2px;
    line-height: 1.2;
    margin-top: 0;
}

.mapAppDesc {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-height: 40px;
    max-width: 198px;
    font-size: 75%;
    padding: 0 5px 2px;
    line-height: 1.2;
    margin-top: 0;    
}

.mapAppSource {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0;
    max-height: 40px;
    max-width: 198px;
    font-size: 75%;
    padding: 0 5px 2px;
    line-height: 1.2;
    font-weight:bold;
}
.mapAppContact {
    padding: 0 5px 2px;
    font-size: 75%;
    margin: 0 auto 0;
    line-height: normal;
}
.mapAppContact a {
    word-wrap: break-word;    
}    
.thumbnailImg {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-height: 123px;
    min-height: 121px;
}

.filterMapsByLocationBtn {
    width: 160px;
    height: 40px;
    margin-top: 1px;
    display: block;
    margin: 0 auto;
    background-color: Transparent;
    background-image: none !important;
    background-repeat:no-repeat;
    border: 1px solid #dedede;
}

.filterMapsByLocationImg {
    width: 25px;
    height: 25px;
    float: left;
    padding-top: 1px;
}

.mapiFrame {
    height: 100% !important;
    max-height: 100% !important;
    width: 100% !important;
    max-width: 100% !important;
    padding-left: 0px !important;
    padding-right: 0px !important;
    padding-top: 0px !important;
    padding-bottom: 60px !important;
    margin-bottom: 0px;
    overflow-y: hidden !important;
    overflow-x: hidden !important;
}

.mapDialog {
    height: 90% !important;
    max-height: 90% !important;
    width: 95% !important;
    max-width: 95% !important;
    overflow-y: hidden !important;
    padding-bottom: 10px;
}

.mapiFrameFooter {
    height: 30px !important;
    max-height: 30px !important;
    width: 100% !important;
    max-width: 100% !important;
    font-size: 10px;
    margin-top: 0px;
    line-height: 0;
    padding-left: 17.6px;
    padding-top: 2px;
}

/*override default jQ UI CSS per Designer's input */
.ui-widget-overlay {
    opacity: 0.9;
}

#myMapsFiltering div.farLeft {
    width: 5em;
    font-size: 0.85em;
    display: inline-block;
}

.myMapFilterTerm {
    text-decoration: none;
}

@media screen and (max-width: 30em) {
    .jcarousel-control-prev {
        left: -5px;
    }
    .jcarousel-control-next {
        right: -5px;
    }
}

/* 767px */
@media screen and (max-width: 48em) {
    #myMapsFiltering div.farLeft {
        font-size: 0.75em;
        display:block;
    }
    .latest-reading {
        padding-left: 0;
    }
}

